<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedTweet</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up</string>
    <string name="btn_link_to_login">Already a member? Login</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_retrieve">Donate Blood</string>
    <string name="btn_request">Request Blood</string>
    <string name="btn_profile">Profile</string>
    <string name="name">Full name</string>
    <string-array name="spinnerItems">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="title_activity_retrieve_data">Activity_Retrieve</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_request">ActivityRequest</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_">Profile_Activity</string>
    <string name="title_activity_fill">FillActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_detail">DetailActivity</string>


</resources>